# better_ai

./: CMakeLists.txt  README.md  knowledge.yaml  main.cpp
Knowledge/: Knowledge.cpp  Knowledge.hpp
Memory/: Memory.cpp  Memory.hpp
Thought/: Thought.cpp  Thought.hpp
